[package]
name = "i_test_stuff"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5" }
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui/", branch = "bevy-main" }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }